RESOLVED FIXED82613
String: Subscript operator shouldn't force conversion to 16-bit characters.
https://bugs.webkit.org/show_bug.cgi?id=82613
Summary String: Subscript operator shouldn't force conversion to 16-bit characters.
Andreas Kling
Reported 2012-03-29 07:27:11 PDT
Using the subscript operator ([]) on a WTF::String currently forces the string to convert itself to 16-bit if it's 8-bit internally. If we avoid this, we can save quite a bit of memory for the cases where this is the only thing triggering the conversion.
Attachments
Proposed patch (1.21 KB, patch)
2012-03-29 07:49 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2012-03-29 07:49:12 PDT
Created attachment 134582 [details] Proposed patch
WebKit Review Bot
Comment 2 2012-03-29 10:04:17 PDT
Comment on attachment 134582 [details] Proposed patch Clearing flags on attachment: 134582 Committed r112543: <http://trac.webkit.org/changeset/112543>
WebKit Review Bot
Comment 3 2012-03-29 10:04:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.