String: Subscript operator shouldn't force conversion to 16-bit characters. <http://webkit.org/b/82613>

Reviewed by Anders Carlsson.

Forward String::operator[] to StringImpl::operator[] instead of indexing into characters().
This avoid implicit conversion of 8-bit strings to 16-bit, and as an example, reduces memory
usage on http://www.allthingsd.com/ by 360kB.

* wtf/text/WTFString.h:
(WTF::String::operator[]):


Canonical link: https://commits.webkit.org/99951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112543 268f45cc-cd09-0410-ab3c-d52691b4dbfc